Generalized clock models implementations.
Both field and non-field versions of all clock models are available, as well as conversions between the two.

Fixes #2007